--- a/css/upcoming.css
+++ b/css/upcoming.css
@@ -15,64 +15,6 @@
   transition: 0.4s ease;
 }
 
-#nav-upcoming::before {
-  height: 5px;
-}
-
-#nav-upcoming .nav-title {
-  color: #fff;
-}
-
-#nav-upcoming .svgIcon {
-  stroke: #fff;
-}
-
-#nav-upcoming .svgFill {
-  fill: #fff;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  background: #0f1923;
-  position: relative;
-  width: 100vw;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-.content {
-  width: 100%;
-  max-width: 1500px;
-  position: relative;
-  margin: 0 auto;
-  margin-top: 65px;
-  z-index: 1;
-  flex: 1;
-}
-
-h1 {
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
-  font-size: 50px;
-  padding-left: 50px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  -webkit-transition: 0.25s ease;
-  -moz-transition: 0.25s ease;
-  -ms-transition: 0.25s ease;
-  -o-transition: 0.25s ease;
-  transition: 0.25s ease;
-}
-
 .media-sel {
   margin-top: 10px;
   width: 100%;
@@ -109,7 +51,7 @@ h1 {
 }
 
 .media-sel-cont {
-  position: relative;
+  padding-left: 0px;
   width: 100%;
   white-space: nowrap;
   overflow-x: scroll;
@@ -166,6 +108,125 @@ h1 {
   width: 100%;
   height: 5px;
   background: #ff4040;
+}
+
+@media (max-width: 1280px) {
+  .media-sel {
+    height: 43px;
+  }
+  .media-sel-item {
+    height: 43px;
+    margin-right: 20px;
+  }
+  .media-sel-item-title {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 525px) {
+  .media-sel-item {
+    margin-right: 15px;
+  }
+  .media-sel-item:first-child {
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 425px) {
+  .media-sel {
+    height: 40px;
+  }
+  .media-sel-item {
+    height: 40px;
+  }
+  .media-sel-item-title {
+    font-size: 25px;
+  }
+  .media-sel-item--selected::after {
+    bottom: 0px;
+    height: 4px;
+  }
+}
+
+@media (max-width: 375px) {
+  .media-sel {
+    height: 33px;
+  }
+  .media-sel-cont {
+    margin-top: 0px;
+  }
+  .media-sel-item {
+    height: 33px;
+  }
+  .media-sel-item--selected::after {
+    height: 4px;
+  }
+  .media-sel-item--selected .media-sel-item-title {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+  .media-sel-item-title {
+    font-size: 20px;
+  }
+}
+
+#nav-upcoming::before {
+  height: 5px;
+}
+
+#nav-upcoming .nav-title {
+  color: #fff;
+}
+
+#nav-upcoming .svgIcon {
+  stroke: #fff;
+}
+
+#nav-upcoming .svgFill {
+  fill: #fff;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background: #0f1923;
+  position: relative;
+  width: 100vw;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content {
+  width: 100%;
+  max-width: 1500px;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 65px;
+  z-index: 1;
+  flex: 1;
+}
+
+h1 {
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 50px;
+  padding-left: 50px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  -webkit-transition: 0.25s ease;
+  -moz-transition: 0.25s ease;
+  -ms-transition: 0.25s ease;
+  -o-transition: 0.25s ease;
+  transition: 0.25s ease;
 }
 
 .cta-section {
@@ -285,12 +346,6 @@ h1 {
     font-size: 45px;
     padding-left: 30px;
   }
-  .media-sel-item {
-    margin-right: 15px;
-  }
-  .media-sel-item:first-child {
-    margin-left: 30px;
-  }
 }
 
 @media (max-width: 425px) {
@@ -300,19 +355,6 @@ h1 {
   h1 {
     margin-top: 15px;
     font-size: 40px;
-  }
-  .media-sel {
-    height: 40px;
-  }
-  .media-sel-item {
-    height: 40px;
-  }
-  .media-sel-item-title {
-    font-size: 25px;
-  }
-  .media-sel-item--selected::after {
-    bottom: 0px;
-    height: 4px;
   }
 }
 
@@ -344,24 +386,5 @@ h1 {
     margin-top: 15px;
     font-size: 35px;
     margin-bottom: 7px;
-  }
-  .media-sel {
-    height: 33px;
-  }
-  .media-sel-cont {
-    margin-top: 0px;
-  }
-  .media-sel-item {
-    height: 33px;
-  }
-  .media-sel-item--selected::after {
-    height: 4px;
-  }
-  .media-sel-item--selected .media-sel-item-title {
-    padding-left: 6px;
-    padding-right: 6px;
-  }
-  .media-sel-item-title {
-    font-size: 20px;
   }
 }
