--- a/scss/show.scss
+++ b/scss/show.scss
@@ -1,73 +1,6 @@
-$watchr-red: #ff2c2c;
-$watchr-darkred: #bf2030;
-$red: #ff4040;
-$yellow: #ffdd6b;
-$green: #00bf71;
-$blue: #138fdf;
-$purple: #7946fb;
-$white: #fff;
-$body-lt: #c7ccd6;
-$body: #9fa4ae;
-$caption: #384b60;
-$caption-top: #576777;
-$top-level: #334256;
-$mid-level: #222c3a;
-$mid-level-tr: rgba(34, 44, 58, 0);
-$bot-level: #1a2431;
-$bot-level-tr: rgba(26, 36, 49, 0);
-$background: #0f1923;
-$grad-blgr: linear-gradient(to right, $blue, mix($blue, $green));
-$grad-gryw: linear-gradient(to right, $green, mix($green, $yellow));
-$title-fade: linear-gradient(to left, $mid-level, $mid-level-tr);
-
-$nunito: "Nunito", sans-serif;
-$montserrat: "Montserrat", sans-serif;
-$roboto: "Roboto", sans-serif;
-
-@mixin transition-ease($timing) {
-    -webkit-transition: $timing ease;
-    -moz-transition: $timing ease;
-    -ms-transition: $timing ease;
-    -o-transition: $timing ease;
-    transition: $timing ease;
-}
-
-@mixin transition-jelly($timing) {
-    -webkit-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -moz-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -ms-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -o-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-}
-
-@mixin no-select() {
-  -webkit-touch-callout: none;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-}
-
-@mixin no-scrollbar() {
-    &::-webkit-scrollbar {
-        width: 0px;  /* remove scrollbar space */
-        height: 0px;
-        background: transparent;  /* optional: just make scrollbar invisible */
-    }
-}
-
-.profile-section--hidden {
-    opacity: 0;
-    transform: translateY(20px);
-}
-
-.profile-section--invis {
-    display: none;
-}
-
-.profile-section {
-    @include transition-ease(0.4s);
-}
+@import "var";
+@import "sections";
+@import "modals";
 
 body {
     background: $background;
@@ -80,108 +13,6 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-}
-
-.modal {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, calc(-50% + 50px)) scale(1);
-    width: 95vw;
-    max-width: 800px;
-    background: $mid-level;
-    z-index: 50;
-    border-radius: 20px;
-    text-align: center;
-    @include transition-ease(0.25s);
-    &--hidden {
-        transform: translate(-50%, calc(-50% + 50px)) scale(0);
-    }
-    &-close {
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        background: url("/img/close.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        right: 15px;
-        top: 15px;
-        cursor: pointer;
-    }
-    &-img {
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        background: url("/img/illus/remove-show.png");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        border-radius: 50%;
-        left: 50%;
-        transform: translateX(-50%);
-        top: -100px;
-    }
-    &-header {
-        color: $body-lt;
-        position: relative;
-        margin-top: 115px;
-        padding-left: 30px;
-        padding-right: 30px;
-        line-height: 34px;
-    }
-    &-body {
-        padding-left: 30px;
-        padding-right: 30px;
-        color: $caption-top;
-        font-family: $nunito;
-        margin-top: 8px;
-        font-size: 20px;
-        line-height: 22px;
-        font-weight: 400;
-    }
-    &-btns {
-        margin-top: 25px;
-        margin-bottom: 20px;
-        .modal-btn {
-            border-radius: 5px;
-            width: 130px;
-            height: 50px;
-            display: inline-block;
-            font-family: $montserrat;
-            font-size: 18px;
-            line-height: 50px;
-            font-weight: 600;
-            cursor: pointer;
-            @include transition-ease(0.25s);
-            &-primary {
-                color: $white;
-                border: 3px solid $blue;
-                background: $blue;
-            }
-            &-secondary {
-                color: $body;
-                border: 3px solid $body;
-                margin-right: 10px;
-                &:hover {
-                    background: $body;
-                    color: $mid-level;
-                }
-            }
-        }
-    }
-}
-
-.dark-cover {
-    background: black;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 30;
-    opacity: 0.5;
-    &--hidden {
-        display: none;
-    }
 }
 
 .content {
@@ -374,7 +205,7 @@ h4 {
                     display: none;
                     border-color: $purple;
                     .show-header-info-btn-img {
-                        background-image: url("/img/remove.png");
+                        background-image: url("/img/btn/remove.png");
                     }
                     .show-header-info-btn-type {
                         color: $purple;
@@ -382,7 +213,7 @@ h4 {
                     &:hover, &:focus, &:active {
                         background: $purple;
                         .show-header-info-btn-img {
-                            background-image: url("/img/remove-hover.png");
+                            background-image: url("/img/btn/remove-hover.png");
                         }
                         .show-header-info-btn-type {
                             color: $white;
@@ -392,7 +223,7 @@ h4 {
                 &.show-added {
                     border-color: $blue;
                     .show-header-info-btn-img {
-                        background-image: url("/img/check.png")
+                        background-image: url("/img/btn/check.png")
                     }
                     .show-header-info-btn-type {
                         color: $blue;
@@ -401,14 +232,14 @@ h4 {
                         background: $blue;
                         color: $white;
                         .show-header-info-btn-img {
-                            background-image: url("/img/check-hover.png")
+                            background-image: url("/img/btn/check-hover.png")
                         }
                     }
                 }
                 &.show-finished {
                     border-color: $green;
                     .show-header-info-btn-img {
-                        background-image: url("/img/check-green.png")
+                        background-image: url("/img/btn/check-green.png")
                     }
                     .show-header-info-btn-type {
                         color: $green;
@@ -417,7 +248,7 @@ h4 {
                         background: $green;
                         color: $white;
                         .show-header-info-btn-img {
-                            background-image: url("/img/check-hover.png")
+                            background-image: url("/img/btn/check-hover.png")
                         }
                     }
                 }
@@ -425,7 +256,7 @@ h4 {
                     vertical-align: top;
                     width: 30px;
                     height: 30px;
-                    background-image: url("/img/add.png");
+                    background-image: url("/img/btn/add.png");
                     background-position: center;
                     background-size: contain;
                     background-repeat: no-repeat;
@@ -446,7 +277,7 @@ h4 {
                 &:hover, &:focus, &:active {
                     background: $red;
                     .show-header-info-btn-img {
-                        background-image: url("/img/add-hover.png");
+                        background-image: url("/img/btn/add-hover.png");
                     }
                     .show-header-info-btn-type {
                         color: $white;
@@ -881,7 +712,7 @@ ul.see-all {
                 &--mark {
                     height: 30px;
                     width: 30px;
-                    background: url("/img/check.png");
+                    background: url("/img/btn/check.png");
                     background-repeat: no-repeat;
                     background-size: contain;
                     position: relative;
@@ -895,7 +726,7 @@ ul.see-all {
                 &--mark-cont:hover,&--mark-cont:focus, &--mark-cont:active {
                     background: $blue;
                     .episode-item-button--mark {
-                        background-image: url("/img/check-hover.png");
+                        background-image: url("/img/btn/check-hover.png");
                     }
                     p {
                         color: $white;
@@ -904,7 +735,7 @@ ul.see-all {
                 &--watch {
                     height: 30px;
                     width: 30px;
-                    background: url("/img/watch.png");
+                    background: url("/img/btn/watch.png");
                     background-repeat: no-repeat;
                     background-size: contain;
                     position: relative;
@@ -921,7 +752,7 @@ ul.see-all {
                     &:hover, &:focus, &:active {
                         background: $green;
                         .episode-item-button--watch {
-                            background-image: url("/img/watch-hover.png");
+                            background-image: url("/img/btn/watch-hover.png");
                         }
                         p {
                             color: $mid-level;
@@ -931,7 +762,7 @@ ul.see-all {
                 &--unmark {
                     height: 30px;
                     width: 30px;
-                    background: url("/img/unwatch.png");
+                    background: url("/img/btn/unwatch.png");
                     background-repeat: no-repeat;
                     background-size: contain;
                     position: relative;
@@ -950,7 +781,7 @@ ul.see-all {
                     &:hover, &:focus, &:active {
                         background: $purple;
                         .episode-item-button--unmark {
-                            background-image: url("/img/unwatch-hover.png");
+                            background-image: url("/img/btn/unwatch-hover.png");
                         }
                         p {
                             color: $white;
