--- a/scss/watchlist.scss
+++ b/scss/watchlist.scss
@@ -1,73 +1,5 @@
-$watchr-red: #ff2c2c;
-$watchr-darkred: #bf2030;
-$red: #ff4040;
-$yellow: #ffdd6b;
-$green: #00bf71;
-$blue: rgb(19, 143, 223);
-$purple: #7946fb;
-$white: #fff;
-$body-lt: rgb(199, 204, 214);
-$body: #9fa4ae;
-$caption: #384b60;
-$caption-top: #576777;
-$top-level: #334256;
-$mid-level: #222c3a;
-$mid-level-tr: rgba(34, 44, 58, 0);
-$bot-level: #1a2431;
-$bot-level-tr: rgba(26, 36, 49, 0);
-$background: #0f1923;
-$grad-blgr: linear-gradient(to right, $blue, mix($blue, $green));
-$grad-gryw: linear-gradient(to right, $green, mix($green, $yellow));
-$title-fade: linear-gradient(to left, $mid-level, $mid-level-tr);
-
-$nunito: "Nunito", sans-serif;
-$montserrat: "Montserrat", sans-serif;
-$roboto: "Roboto", sans-serif;
-
-@mixin transition-ease($timing) {
-    -webkit-transition: $timing ease;
-    -moz-transition: $timing ease;
-    -ms-transition: $timing ease;
-    -o-transition: $timing ease;
-    transition: $timing ease;
-}
-
-@mixin transition-jelly($timing) {
-    -webkit-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -moz-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -ms-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    -o-transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-    transition: all $timing cubic-bezier(0,.63,.5,2), background $timing ease;
-}
-
-@mixin no-select() {
-  -webkit-touch-callout: none;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-}
-
-@mixin no-scrollbar() {
-    &::-webkit-scrollbar {
-        width: 0px;  /* remove scrollbar space */
-        height: 0px;
-        background: transparent;  /* optional: just make scrollbar invisible */
-    }
-}
-
-.profile-section--hidden {
-    opacity: 0;
-    transform: translateY(20px);
-}
-
-.profile-section--invis {
-    display: none;
-}
-
-.profile-section {
-    @include transition-ease(0.4s);
-}
+@import "var";
+@import "sections";
 
 #nav-watchlist {
     &::before {
@@ -91,6 +23,7 @@ body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+    -webkit-overflow-scrolling: touch;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -114,83 +47,6 @@ h1 {
     margin-top: 20px;
     margin-bottom: 10px;
     @include transition-ease(.25s);
-}
-
-.media-sel {
-    margin-top: 10px;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid $bot-level;
-    position: relative;
-    @include transition-ease(.25s);
-
-    &::before {
-        content: "";
-        position: absolute;
-        border-bottom: 2px solid $bot-level;
-        width: calc(50vw - 750px);
-        height: 10px;
-        left: 0px;
-        bottom: -2px;
-        transform: translateX(-100%);
-
-    }
-    &::after {
-        content: "";
-        position: absolute;
-        border-bottom: 2px solid $bot-level;
-        width: calc(50vw - 750px);
-        height: 10px;
-        right: 0px;
-        bottom: -2px;
-        transform: translateX(100%);
-    }
-    &-cont {
-        padding-left: 0px;
-        width: 100%;
-        white-space: nowrap;
-        overflow-x: scroll;
-        @include no-scrollbar;
-    }
-
-    &-item {
-        margin-right: 30px;
-        height: 50px;
-        display: inline-block;
-        cursor: pointer;
-        position: relative;
-        &-title {
-            color: $top-level;
-            font-family: $montserrat;
-            font-size: 30px;
-            margin: 0px;
-            text-align: center;
-            @include transition-ease(.25s);
-            position: relative;
-
-        }
-        &:active .media-sel-item-title, &:hover .media-sel-item-title, &:focus .media-sel-item-title {
-            color: $body-lt;
-        }
-        &:first-child {
-            margin-left: 50px;
-        }
-        &--selected {
-            .media-sel-item-title {
-                color: $body-lt;
-                padding-left: 10px;
-                padding-right: 10px;
-            }
-            &::after {
-                content: "";
-                position: absolute;
-                bottom: 0px;
-                width: 100%;
-                height: 5px;
-                background: $red;
-            }
-        }
-    }
 }
 
 .friends-watching {
@@ -484,7 +340,7 @@ h1 {
             &--mark {
                 height: 30px;
                 width: 30px;
-                background: url("/img/check.png");
+                background: url("/img/btn/check.png");
                 background-repeat: no-repeat;
                 background-size: contain;
                 position: relative;
@@ -499,7 +355,7 @@ h1 {
             &--mark-cont:hover,&--mark-cont:focus, &--mark-cont:active {
                 background: $blue;
                 .show-button--mark {
-                    background-image: url("/img/check-hover.png");
+                    background-image: url("/img/btn/check-hover.png");
                 }
                 p {
                     color: $white;
@@ -508,7 +364,7 @@ h1 {
             &--watch {
                 height: 30px;
                 width: 30px;
-                background: url("/img/watch.png");
+                background: url("/img/btn/watch.png");
                 background-repeat: no-repeat;
                 background-size: contain;
                 position: relative;
@@ -526,7 +382,7 @@ h1 {
                 &:hover, &:focus, &:active {
                     background: $green;
                     .show-button--watch {
-                        background-image: url("/img/watch-hover.png");
+                        background-image: url("/img/btn/watch-hover.png");
                     }
                     p {
                         color: $mid-level;
@@ -656,7 +512,7 @@ h1 {
             &--mark {
                 height: 20px;
                 width: 20px;
-                background: url("/img/check.png");
+                background: url("/img/btn/check.png");
                 background-repeat: no-repeat;
                 background-size: contain;
                 position: relative;
@@ -671,7 +527,7 @@ h1 {
             &--mark-cont:hover,&--mark-cont:focus, &--mark-cont:active {
                 background: $blue;
                 .movie-button--mark {
-                    background-image: url("/img/check-hover.png");
+                    background-image: url("/img/btn/check-hover.png");
                 }
                 p {
                     color: $white;
@@ -698,7 +554,7 @@ h1 {
                 &:hover, &:focus, &:active {
                     background: $green;
                     .movie-button--watch {
-                        background-image: url("/img/eye-hover.png");
+                        background-image: url("/img/btn/eye-hover.png");
                     }
                     p {
                         color: $mid-level;
@@ -866,17 +722,8 @@ h1 {
     .content {
         margin-top: 125px;
     }
-    .media-sel {
-        height: 43px;
-        &-item {
-            height: 43px;
-            margin-right: 20px;
-            &-title {
-                font-size: 25px;
-            }
-        }
-    }
 }
+
 @media (max-width: 820px) {
     .friends-watching {
         padding: 0px;
@@ -1030,14 +877,6 @@ h1 {
         font-size: 45px;
         padding-left: 30px;
     }
-    .media-sel {
-        &-item {
-            margin-right: 15px;
-            &:first-child {
-                margin-left: 30px;
-            }
-        }
-    }
     .friends-watching {
         width: 100%;
         padding-left: 15px;
@@ -1163,21 +1002,6 @@ h1 {
         margin-top: 15px;
         font-size: 40px;
     }
-    .media-sel {
-        height: 40px;
-        &-item {
-            height: 40px;
-            &-title {
-                font-size: 25px;
-            }
-            &--selected {
-                &::after {
-                    bottom: 0px;
-                    height: 4px;
-                }
-            }
-        }
-    }
     .friends-watching {
         padding-left: 0px;
         .friends-item {
@@ -1225,26 +1049,5 @@ h1 {
         margin-top: 15px;
         font-size: 35px;
         margin-bottom: 7px;
-    }
-    .media-sel {
-        height: 33px;
-        &-cont {
-            margin-top: 0px;
-        }
-        &-item {
-            height: 33px;
-            &--selected {
-                &::after {
-                    height: 4px;
-                }
-                .media-sel-item-title {
-                    padding-left: 6px;
-                    padding-right: 6px;
-                }
-            }
-            &-title {
-                font-size: 20px;
-            }
-        }
     }
 }
